# LearnOpenGL

01_cmake_project_example/: CMakeLists.txt  Dependency.cmake
01_cmake_project_example/src/: main.cpp
02_first_glfw_opengl_example/: CMakeLists.txt  Dependency.cmake
02_first_glfw_opengl_example/src/: main.cpp
03_point_example/: CMakeLists.txt  Dependency.cmake
03_point_example/shader/: simple.fs  simple.vs
03_point_example/src/: common.h  main.cpp  shader.cpp  shader.h
cmake_project_example/: CMakeLists.txt
